Styles/portfolio.css
:root {
  --branding-color: #6cb9c1;
  --branding-color-transparent: rgba(108, 185, 193, 0.4);
  --secondary-color: #f7f7f7;
  --secondary-color-transparent: rgba(247, 247, 247, 0.4);
  --accent-color-mint: #b5dce1;
  --accent-color-mint-transparent: rgb(181, 220, 225, 0.4);
  --accent-color-orange: #ecc868;
  --accent-color-orange-transparent: rgba(236, 200, 104, 0.8);
  --default-font-family: "Klee One", cursive;
  --heading-font-family: "Handlee", serif;
}

@media (max-width: 992px) {
  .hero p {
    font-size: 25px;
  }
  .hero h1 {
    font-size: 50px;
  }
  .medium-text {
    font-size: 45px;
  }
  h3,
  h4 {
    font-size: 25px;
  }
  .app-info,
  .about-info {
    text-align: center;
    padding: 0 2px;
  }
  .profile-img {
    max-width: 320px;
  }
}

@media (min-width: 992px) {
  .hero p {
    font-size: 40px;
  }
  .hero h1 {
    font-size: 85px;
  }
  .medium-text {
    font-size: 68px;
  }
  h3,
  h4 {
    font-size: 35px;
  }
  .app-info,
  .about-info {
    margin-top: 20px;
  }
  .text-left {
    text-align: right;
  }
  .profile-img {
    max-width: 400px;
  }
}
body {
  font-family: var(--default-font-family);
}
nav {
  background: #efefef;
}
.navbar-logo {
  max-width: 60px;
}
.nav-link:hover {
  color: var(--accent-color-orange);
}
.active-link {
  color: var(--branding-color);
  font-weight: 600;
}
.hero {
  background-image: url(/images/coding-octopus-background.jpg);
  background-repeat: no-repeat;
  background-position: center;
  background-attachment: fixed;
  background-size: cover;
}
.hero p {
  background-color: var(--secondary-color-transparent);
  font-weight: 600;
  margin-top: 50px;
}
h1,
h2,
h4 {
  font-family: var(--heading-font-family);
  font-weight: 600;
}

h1 {
  font-size: 35px;
}
.hero h1 {
  background-color: var(--secondary-color-transparent);
  font-weight: 500;
  margin: 30px 0;
}
.hero h3 {
  background-color: var(--secondary-color-transparent);
  font-family: var(--default-font-family);
}
.btn-hero {
  background-color: var(--secondary-color-transparent);
  border: 1.2px solid black;
  font-family: var(--heading-font-family);
  font-size: 17px;
  font-weight: 600;
  padding: 10px 20px;
}
.btn-hero:hover {
  border: 1.2px solid var(--accent-color-orange-transparent);
  color: var(--accent-color-orange-transparent);
}
.about-info,
.work-info,
.contact-info {
  margin-top: 100px;
}
.work-info .app-img {
  max-width: 330px;
}
.app-info h2,
.about-info h1 {
  margin: 15px;
}
.app-info p,
.about-info p {
  margin: 15px 10px;
  line-height: 1.5;
  font-size: 18px;
}
.app-info a,
.about-info a {
  margin: 15px;
}
.apps {
  background-color: var(--secondary-color);
}
.btn-branding {
  background-color: var(--branding-color-transparent);
  border: 1px solid var(--branding-color);
  font-family: var(--heading-font-family);
  font-size: 17px;
  font-weight: 600;
  padding: 10px 20px;
}
.btn-branding:hover {
  background-color: var(--secondary-color-transparent);
  border: 1px solid var(--accent-color-orange-transparent);
  color: var(--accent-color-orange-transparent);
}
.social-link {
  color: var(--branding-color);
  font-family: var(--heading-font-family);
  font-size: 20px;

  text-decoration: none;
}
.social-link:hover {
  color: var(--accent-color-orange);
  text-decoration: underline;
}
.larger-icon {
  font-size: 28px;
}
.icon-color {
  color: var(--branding-color);
}
i:hover {
  color: var(--accent-color-orange);
}
.shecodes-logo {
  max-height: 16px;
}

